# mesa

./: .coverage.DESKTOP-P02JU7U.14638.XVdFGxZx  .gitignore  .pre-commit-config.yaml  .vale.ini  CONTRIBUTING.md  Dockerfile  EXAMPLE_USAGE.md  GSoC_2026_Kubeflow_FINAL_Proposal.md  HISTORY.md  Makefile  README.md  docker-compose.yml  fix_mesa_solara.py  model_reset_rng_compat.patch  nd_viz_codespace_runner.sh  pyproject.toml  requirements.txt  run.py  setup.py  simple_model.py  virus_on_network_reproducible_graph.patch  vizdims_move_to_visualization_apply.patch
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: documentation.md  question.md
.github/workflows/: benchmarks-comment.yml  benchmarks.yml  build_lint.yml  comment_pr.yml  greetings.yml  labeler.yml  pr-triage-enforce.yml  pr_triage.yml  pytest.yml  release.yml  stale.yml  update-switcher.yml  vale.yml
benchmarks/: compare_timings.py  configurations.py  global_benchmark.py
docs/: GSoC.md  IMPLEMENTATION.md  Untitled-1.md  Untitled.python.txt  WALKTHROUGH_V2.md  actions.md  best-practices.md  conf.py  getting_started.md  index.md  mesa.md  mesa_extension.md  migration_guide.md  overview.md
docs/_static/: switcher.json
docs/apis/: api_main.md  experimental.md  visualization.md
docs/tutorials/: 0_first_model.ipynb  10_comparing_scenarios.ipynb  10_visualization_custom.ipynb  11_batch_run.ipynb  11_discrete_event_simulation.ipynb  12_comparing_scenarios.ipynb  12_hybrid_abm_devs.ipynb  1_adding_space.ipynb  1_agentset.ipynb  2_agent_activation.ipynb  2_collecting_data.ipynb  3_event_scheduling.ipynb  9_batch_run.ipynb  (+13 more)
examples/: quantamental_tutorial.ipynb
hotelling_law_example/: app.py  model.py  requirements.txt  test_fix.py
mesa/: __init__.py  agent.py  agentset.py  batchrunner.py  datacollection.py  errors.py  exceptions.py  mesa_logging.py  model.py  protocols.py  space.py  space_adaptive.py  timeflow.py
mesa_llm/: .env.example  ARCHITECTURE.md  README.md  __init__.py  main.py  requirements.txt
mesa_stock_market/: __init__.py  agents.py  model.py  reasoning.py  schemas.py  tools.py
minimal_fix_example/: app.py  core_test.py  final_test.py  model.py  test_minimal.py
precommit_home/: db.db
scripts/: fix_precommit_issues.py
tests/: reproduce_issue_2968.py  test_action_space.py  test_agent.py  test_agentset.py  test_backends.py  test_batch_run.py  test_batch_run_ci.py  test_cell_is_full_fix.py  test_datacollection_coverage.py  test_datacollector.py  test_datacollector_index.py  test_datacollector_mutable_fix.py  test_discrete_space.py  test_examples_viz.py  test_exceptions.py  test_exceptions_expansion.py  test_grid.py  test_hexgrid_torus_validation.py  test_import_namespace.py  test_issue_datacollector_index.py  test_lifespan.py  test_model.py  test_protocols.py  test_schedule_run.py  test_solara_viz.py  test_space.py  test_space_adaptive.py  test_timeflow.py
tools/: test-documentation
(+250 files in other folders)
