[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Mesa"
description = "Agent-based modeling (ABM) in Python"
license = { text = "Apache 2.0" }
requires-python = ">=3.12"
authors = [
  { name = "Mesa Team", email = "maintainers@projectmesa.dev" },
]
keywords = [
  "agent",
  "based",
  "modeling",
  "model",
  "ABM",
  "simulation",
  "multi-agent",
]
classifiers = [
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Life",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
]
readme = "README.md"
dependencies = [
  "numpy",
  "pandas",
  "tqdm",
  "scipy",
  "pythran>=0.17.0 ; sys_platform == 'darwin'",
]
dynamic = ["version"]

[project.optional-dependencies]
rec = ["mesa[network,viz]"]
all = ["mesa[network,viz,dev,examples,docs]"]
network = ["networkx"]
viz = ["matplotlib", "solara", "altair", "starlette<1.0"]
dev = [
  "mesa[rec]",
  "ruff",
  "pytest",
  "pytest-cov",
  "sphinx",
  "pytest-mock",
  "pytest-playwright",
  "pytest-ipywidgets",
  "playwright",
  "ipython>=9.2.0",
  "pyarrow",
]
examples = ["mesa[rec]", "pytest", "scipy"]
docs = [
  "mesa[rec]",
  "sphinx",
  "ipython",
  "pydata_sphinx_theme",
  "seaborn",
  "myst-nb",
  "myst-parser",
  "sphinx-copybutton",
]

[project.urls]
homepage = "https://github.com/mesa/mesa"
repository = "https://github.com/mesa/mesa"

[tool.codespell]
ignore-words-list = "ist,hart,nD"

[tool.coverage.run]
source = ["."]
source_pkgs = ["mesa"]
relative_files = true
branch = true

[tool.coverage.paths]
_site-packages-to-flat-layout-mapping = [
  "mesa",
  "*/mesa",
  "*/lib/pypy*/site-packages/mesa",
  "*/lib/python*/site-packages/mesa",
  "*/Lib/site-packages/mesa",
]

[tool.hatch.build.targets.wheel]
packages = ["mesa"]

[tool.hatch.version]
path = "mesa/__init__.py"

[tool.ruff]
target-version = "py312"
extend-exclude = ["build"]
select = [
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "ISC",
  "N",
  "PGH",
  "PIE",
  "PLC",
  "PLE",
  "PLW",
  "Q",
  "RUF",
  "S",
  "SIM",
  "T10",
  "UP",
  "W",
  "YTT",
  "D",
]
extend-ignore = [
  "E501",
  "S101",
  "B017",
  "PGH004",
  "B905",
  "N802",
  "N999",
  "S310",
  "S603",
  "ISC001",
  "S311",
  "PLC"
]
per-file-ignores = { "mesa/examples/*" = ["D"], "docs/tutorials/*" = ["D", "E", "F", "N"], "docs/conf.py" = ["C", "D", "DTZ011", "E"] }

[tool.ruff.pydocstyle]
convention = "google"


